# Crime-Catcher

./: .gitignore  README.md  pyproject.toml
evidence/: incident_log.json
frontend/: package-lock.json
frontend/src/: App.jsx
src/: app.py
src/Crime_Catcher/: __main__.py
src/Crime_Catcher/Analyze/: analyze.py
src/Crime_Catcher/Video/: video.py
src/crime_catcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: analysis_test.py  email_test.py
