
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crime_catcher"
version = "0.1.0"
description = "Detects and reports crimes on security cameras."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
crime_catcher = "Crime_Catcher.__main__:main"